exports[`actions should fetch no games 1`] = `
Array [
  Object {
    "isFetching": true,
    "searchTerm": "Zelda",
    "type": "REQUEST_GAMES",
  },
  Object {
    "games": Array [],
    "isFetching": false,
    "type": "RECEIVE_GAMES",
  },
]
`;

exports[`actions should fetch some games 1`] = `
Array [
  Object {
    "isFetching": true,
    "searchTerm": "Halo",
    "type": "REQUEST_GAMES",
  },
  Object {
    "games": Array [
      Object {
        "name": "Halo",
      },
      Object {
        "name": "Halo 2",
      },
    ],
    "isFetching": false,
    "type": "RECEIVE_GAMES",
  },
]
`;
